--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-jdbc.url=jdbc:derby:target/db;create=true
-jdbc.username=aa
-jdbc.password=bb
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/spring-basics
+jdbc.username=Alexey_Postnov888
+jdbc.password=Alexey005_mysqldbadmin888
